--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Resume Uploader</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-br from-gray-100 to-gray-200 min-h-screen flex items-center justify-center font-sans">
+<body class="bg-gradient-to-br from-gray-100 to-gray-200 min-h-screen flex flex-col items-center justify-start font-sans p-4">
 
   <div class="bg-white shadow-2xl rounded-2xl p-8 max-w-lg w-full space-y-6">
     <h2 class="text-2xl font-semibold text-gray-800 text-center">Upload Your Resume</h2>
@@ -31,9 +31,10 @@
     </form>
 
     <div id="loader" class="text-center text-blue-600 font-medium hidden">Uploading...</div>
-
-    <pre id="output" class="bg-gray-100 rounded-md p-4 text-sm overflow-auto max-h-96 whitespace-pre-wrap text-gray-800"></pre>
   </div>
+
+  <!-- Output Block (Full Width and Expanded) -->
+  <pre id="output" class="w-full max-w-6xl bg-white mt-6 rounded-xl shadow-inner p-6 text-sm text-gray-800 overflow-auto h-[70vh] whitespace-pre-wrap border border-gray-300"></pre>
 
   <script>
     const form = document.getElementById("uploadForm");
@@ -95,4 +96,3 @@
   </script>
 </body>
 </html>
-
