--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="bg-gradient-to-br from-gray-100 to-gray-200 min-h-screen flex flex-col items-center justify-start font-sans p-4">
 
+  <!-- Upload Card -->
   <div class="bg-white shadow-2xl rounded-2xl p-8 max-w-lg w-full space-y-6">
     <h2 class="text-2xl font-semibold text-gray-800 text-center">Upload Your Resume</h2>
 
@@ -33,8 +34,8 @@
     <div id="loader" class="text-center text-blue-600 font-medium hidden">Uploading...</div>
   </div>
 
-  <!-- Output Block (Full Width and Expanded) -->
-  <pre id="output" class="w-full max-w-6xl bg-white mt-6 rounded-xl shadow-inner p-6 text-sm text-gray-800 overflow-auto h-[70vh] whitespace-pre-wrap border border-gray-300"></pre>
+  <!-- Output Block (hidden by default) -->
+  <pre id="output" class="hidden w-full max-w-6xl bg-white mt-6 rounded-xl shadow-inner p-6 text-sm text-gray-800 overflow-auto h-[70vh] whitespace-pre-wrap border border-gray-300"></pre>
 
   <script>
     const form = document.getElementById("uploadForm");
@@ -52,6 +53,7 @@
       formData.append("file", file);
 
       loader.classList.remove("hidden");
+      output.classList.add("hidden");
       output.textContent = "";
 
       try {
@@ -62,8 +64,10 @@
 
         const json = await res.json();
         output.textContent = formatOutput(json);
+        output.classList.remove("hidden"); // Show the output frame
       } catch (err) {
         output.textContent = "Error uploading file. Please try again.";
+        output.classList.remove("hidden");
       } finally {
         loader.classList.add("hidden");
       }
