--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="mt-6 flex items-center gap-x-6">
           <form id="uploadForm" enctype="multipart/form-data" class="w-full">
             <div class="flex flex-col justify-start items-start sm:flex-row sm:items-center gap-x-6">
-              <input type="file" name="file" id="fileInput" accept="application/pdf" required
+              <input type="file" name="file" id="fileInput" accept=".pdf,.docx,.txt,.png,.jpg,.jpeg" required
                 class="drop-shadow-md bg-white font-semibold leading-6 text-gray-900 border border-blue-300 py-2 px-4 rounded-2xl block w-full text-sm text-slate-700
                       file:mr-4 file:py-2 file:px-4
                       file:rounded-full file:border-0
