--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       output.textContent = "";
 
       try {
-        const res = await fetch("https://resume-parsers.onrender.com/upload/", {
+        const res = await fetch("https://test-4g2w.onrender.com/upload/", {
           method: "POST",
           body: formData
         });
